Dark Mode Comment invisibility fixed Contact page updated

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,13 @@
     font-size: 2em;
 }
 
+body{
+    background-color: black;
+}
 
-
-
+.bg-light-dark{
+    background-color: #343a40;
+}
 /*
 .carousel-item>img{
     height: 500px;
